add coverage check